# oiinux

./: .gitignore  README.md  oiinux-env.sh
compositor/: main.c  meson.build
init/: init.c
installer/: installer.c
iso/staging/boot/grub/: grub.cfg
kernel/config/: kernel-release  oiinux.config
scripts/: 00-setup.sh  01-toolchain.sh  02-kernel.sh
terminal/: meson.build  terminal.c
